[IMPROVE] - jvm tuning, db indexes, s3 caching, hikari pool